# SuikaGameClone

./: .gitignore  CMakeLists.txt  README.md
Sources/: Main.cpp
Sources/Application/: Application.cpp  Application.h  Renderer.cpp  Renderer.h
Sources/Core/: Fruit.cpp  Fruit.h  Solver.cpp  Solver.h
Sources/Utils/: Vec2Float.cpp  Vec2Float.h
